--- a/application/modules/customer/views/scripts/layout.phtml
+++ b/application/modules/customer/views/scripts/layout.phtml
@@ -560,7 +560,8 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
         <div class="col-lg-4  col-md-12 col-sm-12 col-xs-12">
           <h3> Меню </h3>
           <ul>
-            <li> <a href="<?= $this->baseUrl().'/customer/about/' ?>"> Как это работает</a> </li>
+            <li> <a href="<?= $this->baseUrl().'/customer/become-performer/' ?>">Как стать исполнителем</a> </li>
+            <li> <a href="<?= $this->baseUrl().'/customer/about/' ?>">Как это работает</a> </li>
             <li> <a href="<?= $this->baseUrl().'/customer/terms/' ?>">Правила сервиса</a> </li>
             <li> <a href="<?= $this->baseUrl().'/customer/contacts/' ?>"> Контакты </a> </li>
           </ul>
