--- a/application/modules/default/views/scripts/layout.phtml
+++ b/application/modules/default/views/scripts/layout.phtml
@@ -524,8 +524,8 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
         <div class="col-lg-4  col-md-12 col-sm-12 col-xs-12">
           <h3> Меню </h3>
           <ul>
-              <li> <a href="#"  data-toggle="modal" data-target="#ModalLogin"> Кабинет </a> </li>
-            <li> <a href="#"  data-toggle="modal" data-target="#ModalLogin"> Создать задачу </a> </li>
+            
+            <li> <a href="<?= $this->baseUrl().'/become-performer/' ?>">Как стать исполнителем</a> </li>
             <li> <a href="<?= $this->baseUrl().'/terms/' ?>">Правила сервиса</a> </li>
             <li> <a href="<?= $this->baseUrl().'/about/' ?>"> Как это работает</a> </li>
             <li> <a href="<?= $this->baseUrl().'/contacts/' ?>"> Контакты </a> </li>
