--- a/application/modules/performer/views/scripts/layout.phtml
+++ b/application/modules/performer/views/scripts/layout.phtml
@@ -476,7 +476,6 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
             <li> <a href="<?= $this->baseUrl()?>/performer/index/tasks">Актуальные задания</a> </li>
             <li> <a href="<?= $this->baseUrl()?>/performer/performers/">Исполнители </a> </li>
             <li> <a href="<?= $this->baseUrl()?>/performer/about/">Как это работает</a> </li>
-            <li> <a href="<?= $this->baseUrl()?>/performer/contacts">Контакты</a> </li>
           <?php }else{ ?>
             <li> <a href="#"  data-toggle="modal" data-target="#ModalLogin">Заказать услугу</a> </li>
             <li> <a href="<?= $this->baseUrl()?>/performers/">Исполнители </a> </li>
@@ -526,8 +525,8 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
           <h3> Меню </h3>
           <ul>
               
+            <li> <a href="<?= $this->baseUrl().'/performer/become-performer/'?>" >Как стать исполнителем</a> </li>
             <li> <a href="<?= $this->baseUrl().'/performer/terms/'?>" > Правила сервиса</a> </li>
-            
             <li> <a href="<?= $this->baseUrl().'/performer/about/' ?>"> Как это работает</a> </li>
             <li> <a href="<?= $this->baseUrl().'/performer/contacts/' ?>"> Контакты </a> </li>
           </ul>
